# event-engine

./: .gitignore  Dockerfile-ex-app  LICENSE  Makefile  README.md
event-engine/: Cargo.toml
event-engine/src/: errors.rs  events.rs  lib.rs  plugins.rs
example/: README.md  docker-compose.yml
example/pyplugin/: Dockerfile  plugin.py
example/rust-app/: Cargo.toml  log4rs.yml
example/rust-app/src/: main.rs
load-test/: Cargo.toml
load-test/resources/: load-test.toml
load-test/src/: config.rs  main.rs
pyevents/: Dockerfile  Dockerfile-3.13  Dockerfile-3.8  README.md  events.py  pyproject.toml
pyevents/pyevents/: events.py
