[package]
name = "event-engine"
version = "0.1.2"
edition = "2021"
description = "Framework for writing event-driven application utilizing a plugin architecture."
license = "BSD-3-Clause"
homepage = "https://github.com/tapis-project/event-engine"
repository = "https://github.com/tapis-project/event-engine"
readme = "../README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
uuid = { version = "1.1", features = ["v4"] }
rand = "0.8.5"
thiserror = "1.0"